--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "hungry-nites",
   "version": "1.0.0",
   "description": "This is my food ordering app",
-  "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "npx parcel ./public/index.html"
+    "start": "npx parcel ./public/index.html",
+    "build": "npx parcel build ./public/index.html"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   }
 }
