--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "tailwindcss": "^3.4.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.22.3",
+    "react-toastify": "^10.0.5"
   }
 }
